fix: restore original pet movement and synchronized nametags