@@ -1,11 +1,12 @@
 package it.heron.hpet.modules.pets.userpets.fakeentities.armorstandmetadatahandlers;
 
 import com.github.retrooper.packetevents.protocol.entity.data.EntityData;
+import com.github.retrooper.packetevents.protocol.entity.data.EntityDataTypes;
 import com.github.retrooper.packetevents.util.Vector3f;
 import net.kyori.adventure.text.Component;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 public abstract class AbstractMetadataHandler implements ArmorStandMetadataHandler {
 
@@ -20,9 +21,15 @@ public abstract class AbstractMetadataHandler implements ArmorStandMetadataHandl
 
     @Override
     public List<EntityData<?>> metadata(Component name, boolean small, boolean glow) {
-        List<EntityData<?>> entityDatas = Arrays.asList(invisible(), name(name), marker(), showArms(), armData());
-        if(small) entityDatas.add(small());
-        if(glow) entityDatas.add(glow());
-        return entityDatas;
+        byte entityFlags = (byte) (0x20 | (glow ? 0x40 : 0));
+        byte armorStandFlags = (byte) (0x10 | 0x04 | (small ? 0x01 : 0));
+        return List.of(
+                new EntityData<>(0, EntityDataTypes.BYTE, entityFlags),
+                new EntityData<>(2, EntityDataTypes.OPTIONAL_ADV_COMPONENT, Optional.ofNullable(name)),
+                new EntityData<>(3, EntityDataTypes.BOOLEAN, true),
+                new EntityData<>(15, EntityDataTypes.BYTE, armorStandFlags),
+                // Paper 26.2: 18 is the left arm, while MAIN_HAND is rendered by the right arm (19).
+                new EntityData<>(19, EntityDataTypes.ROTATION, armPose())
+        );
     }
 }
